fix(FormField): resolve conflicts and rewrite vertical align

--- a/packages/vkui/src/components/FormField/FormField.module.css
+++ b/packages/vkui/src/components/FormField/FormField.module.css
@@ -72,11 +72,13 @@
 }
 
 .FormField__icon--align-start {
-  align-self: flex-start;
+  inset-block-start: 0;
+  transform: translateY(0);
 }
 
 .FormField__icon--align-end {
-  align-self: flex-end;
+  inset-block-start: 100%;
+  transform: translateY(-100%);
 }
 
 .FormField__before {
